atualizando aulas de rh

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
-    background: linear-gradient(135deg, #1e3a8a, #f59e0b); 
+    background: linear-gradient(135deg, #1e3a8a, #f59e0b);
 
 }
 
@@ -11,7 +11,8 @@ body {
     color: #fff;
     padding: 40px 20px;
     text-align: center;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    /* Sombra sutil */
     position: relative;
 }
 
@@ -45,7 +46,11 @@ body {
 }
 
 /* Efeitos de Transição */
-.title, .subtitle, .time-slot, a {
+.title,
+.subtitle,
+.time-slot,
+a,
+p {
     opacity: 0;
     transform: translateY(20px);
     animation: fadeInUp 1s forwards;
@@ -55,11 +60,14 @@ body {
     animation-delay: 0.3s;
 }
 
-.subtitle, .aula {
+.subtitle,
+.aula {
     animation-delay: 0.6s;
 }
 
-.time-slot, a {
+.time-slot,
+a,
+p {
     animation-delay: 0.9s;
 }
 
@@ -88,15 +96,12 @@ body {
     color: #f59e0b;
 }
 
-.section p {
-    color: #deac54;
-}
-
 .list {
     margin-left: 20px;
 }
 
-.list li {
+p,
+li {
     font-size: 1rem;
     line-height: 1.6;
     color: #bababa;
@@ -120,22 +125,31 @@ ul li::before {
     top: 0;
 }
 
-a {
+a,
+strong {
     color: whitesmoke;
     text-decoration: none;
 }
 
-strong {
-    color: white;
+em {
+    color: #deac54;
 }
 
 img {
     height: 300px;
-    
+    border-radius: 10px;
+    border: 2px solid #deac54;
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+}
+
+.vertical {
+    height: 550px;
 }
 
 .cropped {
-    width: 350px; 
+    width: 350px;
     height: 260px;
     overflow: hidden;
     border-radius: 10px;
@@ -145,9 +159,22 @@ img {
     justify-content: center;
 }
 
+.cropped-vert {
+    height: 550px;
+    width: 380px;
+    overflow: hidden;
+    border: 2px solid #deac54;
+    border-radius: 10px;
+    margin: auto;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
 .photo-cut {
     margin: -20px 0;
 }
+
 .footer {
     text-align: center;
 }
