--- a/home.css
+++ b/home.css
@@ -1,4 +1,3 @@
-/* Definindo a aparência global para modo escuro */
 * {
     margin: 0;
     padding: 0;
@@ -75,7 +74,7 @@ html, body {
     font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 10px;
-    color: #50a7ff; /* Azul claro */
+    color: #50a7ff; 
 }
 
 .subtitle {
@@ -83,17 +82,17 @@ html, body {
     font-weight: 400;
 }
 
-/* Seções */
 .section {
     margin: 20px auto;
     padding: 20px;
     max-width: 1200px;
+    display: none;
 }
 
 /* Card */
 .card {
     background-color: #333333;
-    border: 1px solid #444444; /* Borda um pouco mais clara para destaque */
+    border: 1px solid #444444; 
     border-radius: 20px;
     padding: 30px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
@@ -124,36 +123,34 @@ p {
 
 .list li {
     margin-bottom: 10px;
-    width: calc(50% - 7.5px); /* Dois links por linha */
+    width: calc(50% - 7.5px); 
 }
 
 .link {
     text-decoration: none;
-    color: #50a7ff; /* Azul claro */
+    color: #50a7ff; 
     font-size: 1.1rem;
     font-weight: 500;
     display: block;
     padding: 10px;
-    background-color: #444444; /* Fundo dos links */
+    background-color: #444444;
     border-radius: 6px;
     transition: color 0.3s ease, transform 0.3s ease, background-color 0.3s ease;
 }
 
 .link:hover {
-    color: #f1c40f; /* Amarelo ao passar o mouse */
-    background-color: #1e3a8a; /* Azul ao passar o mouse */
+    color: #f1c40f;
+    background-color: #1e3a8a; 
     transform: translateX(5px);
 }
 
-/* Cor amarela para os números das aulas */
 .subtitle.aula {
-    color: #f1c40f; /* Amarelo */
+    color: #f1c40f; 
     font-weight: bold;
 }
 
-/* Linha de separação abaixo dos links */
 .link + .link {
-    border-top: 2px solid #555; /* Linha cinza escura separando os links */
+    border-top: 2px solid #555; 
 }
 
 .footer {
@@ -162,7 +159,6 @@ p {
     margin-top: 40px;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
     .header-content {
         padding: 10px;
@@ -189,6 +185,6 @@ p {
     }
 
     .list li {
-        width: 100%; /* Links ocupam toda a largura em dispositivos móveis */
+        width: 100%;
     }
 }
