--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Titillium Web', 'Arial';
     color: #333;
     margin: 0;
     padding: 0;
@@ -44,7 +46,6 @@ body {
     font-style: normal;
 }
 
-/* Efeitos de Transição */
 .title,
 .subtitle,
 .time-slot,
@@ -79,13 +80,14 @@ p {
 
 /* Seções */
 .section {
-    background:#333333;
     color: whitesmoke;
-    padding: 20px 40px;
     max-width: 70%;
-    margin: 40px auto;
-    border: 1px solid #f1c40f;
+    margin: 20px auto;
+    background-color: #333333;
+    border: 1px solid #444444;
     border-radius: 20px;
+    padding: 30px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 /* Estilo de Títulos e Listas */
