--- a/home.css
+++ b/home.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Titillium Web', 'Arial';
+
 }
 
 body {
@@ -58,11 +62,11 @@ html, body {
     color: #f1c40f;
 }
 
-/* Header */
 .header {
     color: #ffffff;
     padding: 30px 0 0;
     text-align: center;
+    margin-top: 30px;
 }
 
 .header-content {
